# simsdk-rocky-sandbox

./: CMakeLists.txt  README.md  bootstrap-vcpkg.bat  main.cpp
src/: Beam.h  DataStoreAdapter.h  Gate.h  Platform.h  SimulationContext.h  main.cpp
vcpkg/: vcpkg.json
